--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,6 +108,8 @@ jobs:
     - name: test
       run: |
         node gltf/cli.js -i demo/pirate.obj -o pirate.glb -v
+        wc -c pirate.glb
+        node gltf/cli.js -test `pwd`/pirate.glb
         node js/meshopt_decoder.test.js
     - name: npm pack
       run: cd gltf && npm pack
